src/test/resources/rules/success/UnusedLocalVariable.java
package rules.success;

public class UnusedLocalVariable {
    public void method() {
        String used = "used";
        used.isEmpty();
    }
}
