src/test/resources/rules/fail/UnusedLocalVariable.java
package rules.fail;

public class UnusedLocalVariable {
    public void method() {
        String unused = "not used";
    }
}
